bold functionality added

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <div class="bg-blue-200 border-solid border-2 border-black h-9/12 mx-12 my-12 pt-6">
                     <div class="grid grid-cols-3 gap-4">
                         <div class="ml-8">
-                            <i class="pr-3 fa-solid fa-bold"></i>
-                            <i class="pr-3 fas fa-italic"></i>
-                            <i class="pr-3 fa-solid fa-underline"></i>
+                            <i id="bold-button" class="hover:bg-blue-400 p-2 fa-solid fa-bold"></i>
+                            <i class="hover:bg-blue-400 p-2 fas fa-italic"></i>
+                            <i class="hover:bg-blue-400 p-2 fa-solid fa-underline"></i>
                         </div>
                         <div class="text-center ">
-                            <i class="pr-3 fa-solid fa-align-left"></i>
+                            <i class="p-2 fa-solid fa-align-left"></i>
                             <i class="pr-3 fa-solid fa-align-center"></i>
                             <i class="pr-3 fa-solid fa-align-right"></i>
                             <i class="pr-3 fa-solid fa-align-justify"></i>
@@ -51,6 +51,8 @@
 
         </section>
     </main>
+
+    <script src="js/functions.js"></script>
 </body>
 
 </html>
