Bold button added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Text Edition</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/97b3c9072b.js" crossorigin="anonymous"></script>
+    <link type="text/html" rel="stylesheet" href="style.css">
 
 
 </head>
@@ -34,8 +35,9 @@
                             <i class="pr-3 fa-solid fa-align-justify"></i>
                         </div>
                         <div class="text-center">
-                            <input class="w-8 rounded-md" type="number" name="" value="11" id="">
-                            <i class="pl-4 fa-solid fa-palette"></i>
+                            <input class="w-8 mr-3 rounded-md" type="number" name="" value="11" id="">
+                            <input class="w-8 rounded-md" type="color" id="colorpicker" value="">
+
                         </div>
                     </div>
                     <div class="pt-5">
