--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="bg-blue-200 border-solid border-2 border-black h-9/12 mx-12 my-12 pt-6">
                     <div class="grid grid-cols-3 gap-4">
                         <div class="ml-8">
-                            <i id="bold-button" class="hover:bg-blue-400 p-2 fa-solid fa-bold"></i>
-                            <i class="hover:bg-blue-400 p-2 fas fa-italic"></i>
+                            <i onclick="fontBold()" class="hover:bg-blue-400 p-2 fa-solid fa-bold"></i>
+                            <i onclick="fontItalic()" class="hover:bg-blue-400 p-2 fas fa-italic"></i>
                             <i class="hover:bg-blue-400 p-2 fa-solid fa-underline"></i>
                         </div>
                         <div class="text-center ">
